<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_album"
        android:icon="@drawable/ic_album"
        android:title="Álbumes"
        android:contentDescription="Navegar a la sección de álbumes" />

    <item
        android:id="@+id/bottom_nav_artist"
...
